--- a/about/about.css
+++ b/about/about.css
@@ -37,7 +37,7 @@ body {
   letter-spacing: 0.5px;
 }
 p {
-  line-height: 1.5;
+  /* line-height: 1.5; */
 }
 h2 {
   font-family: "NationalPension";
