--- a/about/about.css
+++ b/about/about.css
@@ -34,10 +34,10 @@ body {
     right 10% bottom 30%;
   background-size: 80px, 60px, 100px;
   background-attachment: fixed;
-  letter-spacing: 0.5px;
+  /* letter-spacing: 0.5px; */
 }
 p {
-  /* line-height: 1.5; */
+  line-height: 1.5;
 }
 h2 {
   font-family: "NationalPension";
