--- a/creative/creativecss/creativeStyle.css
+++ b/creative/creativecss/creativeStyle.css
@@ -77,7 +77,7 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 200px 0px 200px;
+    margin: 150px 0px 200px;
     gap: 100px;
     width: 100%;
   }
@@ -91,9 +91,9 @@ ul {
   }
   .left ul {
     /* border: 1px solid red; */
-    width: 500px;
+    width: 90%;
     height: 50px;
-    margin: 150px 0px 0px;
+    margin: 150px auto 0px;
     display: flex;
     gap: 20px;
   }
